test/tests/compiler/6_statements_and_conditional_expressions/valid/if_nested_2.plx
pub fn main(none) i32 {
    a: i32 = 0
    b: i32 = 1
    if a {
        b = 1
    }
    elif ~b {
        b = 2
    }
    return b
}
