test/tests/compiler/6_statements_and_conditional_expressions/invalid_semantics/extra_credit/use_label_as_variable.plx
pub fn main(none) i32 {
    x: i32 = 0
    label a
    x = a
    return 0
}
